Swipe to delete working with 1 issue

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,14 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    // For Kotlin projects
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 
     defaultConfig {
         applicationId "com.devslopes.favoritebooks"
